# timbrewolf-3

./: Cargo.toml  README.md  main.sh  os_files.db  package-lock.json  package.json  package.json~  setup.sh  taku  taku.config.env  taku.config.js  webpack.config.js
.taku/: README.md  maketree
.taku/src/back/src/back/src/: create.sh
.taku/src/back/src/back/src/cli/functions/: maketree.js  resolve.sh
.taku/src/front/: webpack.config.js
.taku/src/front/src/: index.jsx
_box/audio-context/: audio-context.webloc  gpt-chat-audio-context.webloc
public/: index.html
src/: App.jsx
src/back/: Cargo.toml  main.rs
src/back/src/back/src/: README.md
src/back/src/util/recorder/: main.sh
src/front/: audio-context.js  package.json  webpack.config.js
src/front/src/components/: Navbar.jsx  TextToSpeech.jsx
src/front/src/modules/: midi.js
src/front/src/router/: index.jsx
src/front/src/router/example/: page.jsx
src/taku/: .gitignore  main.sh  package.json  setup.sh
src/taku/.taku/: schema.json
src2/back/: README.md  main.rs
src2/back/src/back/src/: build.rs  imgnx.db  main.sh
src2/front/: index.html  tailwind.config.js  webpack.config.js
src2/front/src/components/: Home.jsx
src2/front/src/styles/: global.css
